Models: add device
This patch add 3 properties for a device:
 - Name: It could be "Desktop-xxx", "Google Pixel 5",
   "iPhone 12" or something else.
 - Type: "PC" or "Phone".
 - IPaddress: IP address of the device, it can be IPv4
   and IPv6.

Signed-off-by: Jason Zhang <jason.gp.zhang@gmail.com>

--- a/Tumbleweed.csproj
+++ b/Tumbleweed.csproj
@@ -78,6 +78,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Models\Device.cs" />
     <Compile Include="Views\Pages\HomePage.xaml.cs">
       <DependentUpon>HomePage.xaml</DependentUpon>
     </Compile>
